# shoplinemcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-13-shopline-mcp.md
docs/superpowers/specs/: 2026-04-13-shopline-mcp-design.md
src/shopline_mcp/: __init__.py  api.py  app.py  server.py
src/shopline_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shopline_mcp/config/: settings.py
src/shopline_mcp/tools/: addon_product_tools.py  affiliate_tools.py  agent_tools.py  analytics_tools.py  base_tool.py  category_tools.py  channel_tools.py  chatie_tools.py  conversation_tools.py  custom_field_tools.py  customer_group_tools.py  customer_tools.py  delivery_option_tools.py  flash_price_tools.py  gift_tools.py  member_point_tools.py  membership_tier_tools.py  merchant_tools.py  order_delivery_tools.py  order_tools.py  payment_tools.py  product_tools.py  promotion_tools.py  return_order_tools.py  review_tools.py  settings_tools.py  staff_tools.py  store_credit_tools.py  subscription_tools.py  tax_tools.py  token_tools.py  verification_tools.py
src/shopline_mcp/tools/writes/: category_writes.py  conversation_writes.py  customer_writes.py  delivery_option_writes.py  gift_writes.py  media_writes.py  merchant_writes.py  order_delivery_writes.py  order_writes.py  product_writes.py  promotion_writes.py  purchase_order_writes.py  return_order_writes.py  review_writes.py
