[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopline-mcp"
version = "0.1.0"
description = "MCP server for Shopline Open API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.scripts]
shopline-mcp = "shopline_mcp.server:main"
