[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopline-mcp"
version = "0.1.0"
description = "MCP server for Shopline Open API — 140+ tools for orders, products, customers, promotions, and analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "tzangms", email = "tzangms@gmail.com"}]
requires-python = ">=3.10"
keywords = ["mcp", "shopline", "ecommerce", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/tzangms/shoplinemcp"
Repository = "https://github.com/tzangms/shoplinemcp"
Issues = "https://github.com/tzangms/shoplinemcp/issues"

[project.scripts]
shopline-mcp = "shopline_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
